# fRPC-Substrate

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  deals.yaml  fluence-lock.yaml  fluence.yaml  hacking_frpc.md  jest.config.js  jest.config.ts  package-lock.json  package.json  provider.yaml  rust-toolchain.toml  tsconfig.json  workers.yaml
.fluence/: deployed.yaml  docker-compose.yaml  env.yaml  project-secrets.yaml  provider-artifacts.yaml  provider-secrets.yaml  workers.yaml
.fluence/aqua/: deals.aqua  services.aqua  workers.aqua
.fluence/aqua-dependencies/: package-lock.json
.fluence/ccp-configs/: nox-1_Config.toml
.fluence/configs/: nox-0_Config.toml  nox-1_Config.toml  nox-2_Config.toml
.fluence/schemas/: deals.yaml.json  deployed.yaml.json  fluence.json  fluence.yaml.json  module.yaml.json  workers.json  workers.yaml.json
.fluence/tmp/: Config.toml
.github/: actionlint.yaml  renovate.json
.github/release-please/: config.json
.github/workflows/: release.yml  run-tests.yml  tests.yml
eth-rpc/: service.yaml
eth-rpc/curl-adapter/: curl_adapter.wasm  module.yaml
eth-rpc/curl_effector/: curl_effector.wasm  module.yaml
eth-rpc/eth_rpc/: Cargo.toml  module.yaml
eth-rpc/eth_rpc/src/: curl_transport.rs  values.rs
gateway/: README.md  config.json  package-lock.json  package.json  pnpm-lock.yaml  web3run.js
gateway/aqua/: balancer.aqua  counter.aqua  eth_rpc.aqua  logger.aqua  provider.aqua  quorum.aqua  random.aqua  rpc.aqua  subnet.aqua  utils.aqua
gateway/aqua-compiled/: counter.d.ts  counter.js  logger.d.ts  logger.js  quorum.d.ts  quorum.js  rpc.d.ts  rpc.js
gateway/configs/: quickstart_config.json
gateway/src/: config.js  index.js  methods.js  utils.js
src/aqua-compiled/: main.d.ts  main.js
src/aqua-rpc/: balancer.aqua  (+3 more)
test/: config.ts  consts.ts  env.ts  fRPC.integration-test.ts  integration.test.ts  quickstart.integration-test.ts  utils.ts
wasm-modules/: service.yaml
wasm-modules/eth-rpc/: Cargo.toml  module.yaml
wasm-modules/eth-rpc/src/: main.rs
(+8 files in other folders)
