[package]
name = "eth_rpc"
version = "0.2.0"
edition = "2021"
authors = ["Fluence Labs"]
publish = false

[[bin]]
name = "eth_rpc"
path = "src/main.rs"

[dependencies]
web3 = { version = "=0.19.0", features = [], default-features = false }
serde_json = "=1.0.108"
serde = "=1.0.193"
jsonrpc-core = "=18.0.0"
tokio = { version = "=1.34.0", default-features = false, features = ["rt"] }
eyre = "=0.6.9"
log = "=0.4.20"
marine-rs-sdk = { version = "=0.14.0", features = ["logger"] }
curl-effector-imports = { git = "https://github.com/fluencelabs/effectors.git", branch = "introduce-crates" }

[dev-dependencies]
marine-rs-sdk-test = "=0.16.0"
