[package]
name = "eth_rpc"
version = "0.2.0"
edition = "2021"
authors = ["Fluence Labs"]
publish = false

[[bin]]
name = "eth_rpc"
path = "src/main.rs"

[dependencies]
web3 = { version = "=0.19.0", features = [], default-features = false }
serde_json = "=1.0.117"
serde = "=1.0.202"
jsonrpc-core = "=18.0.0"
tokio = { version = "=1.37.0", default-features = false, features = ["rt"] }
eyre = "=0.6.12"
log = "=0.4.21"
marine-rs-sdk = { version = "=0.14.0", features = ["logger"] }
curl-effector-imports = "0.1.1"

[dev-dependencies]
marine-rs-sdk-test = "=0.16.1"
