[package]
name = "eth_rpc"
version = "0.1.0"
edition = "2021"
authors = ["Fluence Labs"]
publish = false

[[bin]]
name = "eth_rpc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { version = "=0.19.0", features = [], default-features = false }
#async-std = "1.12.0" # async-std does not support wasm32-wasi
serde_json = "=1.0.108"
serde = "=1.0.193"
jsonrpc-core = "=18.0.0"
tokio = { version = "=1.34.0", default-features = false, features = ["rt"] }
eyre = "=0.6.11"

marine-rs-sdk = "=0.10.1"

[dev-dependencies]
marine-rs-sdk-test = "=0.11.1"
